--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -26,5 +26,7 @@ jobs:
         run: |
           gem install dip
           dip provision
+      - name: Run linters
+        run: dip standardrb
       - name: Run tests
         run: dip appraisal rspec
