--- a/dip.yml
+++ b/dip.yml
@@ -30,10 +30,10 @@ interaction:
     service: ruby
     command: bundle exec rspec
 
-  standardrb:
-    description: Run Standard linter
+  rubocop:
+    description: Run Rubocop linter
     service: ruby
-    command: bundle exec standardrb
+    command: bundle exec rubocop
 
 provision:
   - cp -f lefthook-local.dip_example.yml lefthook-local.yml
