--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,4 +3,4 @@ pre-commit:
     rubocop:
       tags: backend
       glob: "{**/*.rb,*.rb,Gemfile,Rakefile,Appraisals}"
-      run: bundle exec rubocop -A --force-exclusion {staged_files} && git add {staged_files}
+      runner: bundle exec rubocop -A --force-exclusion {staged_files} && git add {staged_files}
