--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,7 @@ AllCops:
   DisplayCopNames: true
   SuggestExtensions: false
   NewCops: disable
+  TargetRubyVersion: 3.1
 
 Standard/BlockSingleLineBraces:
   Enabled: false
